eliminate remaining java 9 warnings